loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:9: error: illegal start of simple expression
  }
  ^Poucet2:10: error: ';' expected but '{' found.
  while (nbbiscuit>=3){
                      ^