loopdowhile.Poucet2.scala.code
var nbbiscuit=0
while (estSortie==false){
  do{
    forward()
    if (estSurBiscuit==true){
      nbbiscuit=nbbiscuit+1
    }  
    while(crossing==false)
  }
	while (nbbiscuit>=3){
    left()
  }
  while (nbbiscuit<3){
    right()
  }
	nbbiscuit=0
}

